--- a/woorischool/Cells/VIews/AlarmTableViewCell.xib
+++ b/woorischool/Cells/VIews/AlarmTableViewCell.xib
@@ -19,11 +19,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="128" id="KGk-i7-Jjw" customClass="AlarmTableViewCell" customModule="우리스쿨" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="AlarmTableViewCell" customModule="우리스쿨" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iEa-t3-gXT" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
@@ -43,9 +43,9 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRc-eG-eIh" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="68" y="0.0" width="232" height="112"/>
+                        <rect key="frame" x="68" y="0.0" width="232" height="76"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TN-6Y-LDv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" text="fsdfsdfndsj" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TN-6Y-LDv">
                                 <rect key="frame" x="20" y="10" width="161.5" height="14"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
                                 <color key="textColor" name="brownGrey"/>
@@ -57,8 +57,8 @@
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SWZ-mE-Ph2">
-                                <rect key="frame" x="20" y="30" width="192" height="67"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="kvmaklsvmk" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SWZ-mE-Ph2">
+                                <rect key="frame" x="20" y="30" width="192" height="31"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
@@ -93,10 +93,10 @@
                 <constraints>
                     <constraint firstItem="iEa-t3-gXT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="Afp-qu-Huw"/>
                     <constraint firstItem="xRc-eG-eIh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="MxS-Jo-4Lc"/>
+                    <constraint firstAttribute="bottom" secondItem="xRc-eG-eIh" secondAttribute="bottom" constant="15" id="OQZ-K3-Yz9"/>
                     <constraint firstItem="iEa-t3-gXT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="VIy-HM-7BJ"/>
                     <constraint firstAttribute="trailing" secondItem="xRc-eG-eIh" secondAttribute="trailing" constant="20" id="hQR-eC-Hwi"/>
                     <constraint firstItem="xRc-eG-eIh" firstAttribute="leading" secondItem="iEa-t3-gXT" secondAttribute="trailing" constant="10" id="iVp-n5-RoF"/>
-                    <constraint firstAttribute="bottom" secondItem="xRc-eG-eIh" secondAttribute="bottom" constant="16" id="xmh-kg-RPA"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -107,7 +107,7 @@
                 <outlet property="titleLabel" destination="0TN-6Y-LDv" id="tEc-zW-v5z"/>
                 <outlet property="typeLabel" destination="iEa-t3-gXT" id="8sU-jr-t8G"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="121.875"/>
+            <point key="canvasLocation" x="137.68115942028987" y="108.81696428571428"/>
         </tableViewCell>
     </objects>
     <resources>
