--- a/woorischool/Cells/VIews/ChattingRoomTableViewCell.xib
+++ b/woorischool/Cells/VIews/ChattingRoomTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,7 +23,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="tuN-DW-CYx">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="tuN-DW-CYx" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
                         <rect key="frame" x="22" y="32.5" width="54" height="54"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="54" id="yOC-Bg-9Fd"/>
@@ -31,13 +31,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqt-6I-Hcr">
-                        <rect key="frame" x="88" y="32.5" width="42" height="20"/>
+                        <rect key="frame" x="88" y="32.5" width="180" height="20"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="17"/>
                         <color key="textColor" name="greyishBrown"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEt-8A-Fs2">
-                        <rect key="frame" x="88" y="71" width="32" height="15.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEt-8A-Fs2">
+                        <rect key="frame" x="88" y="71" width="171" height="15.5"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11R-9H-1Oo" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
+                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11R-9H-1Oo" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
                         <rect key="frame" x="268" y="32.5" width="33" height="20"/>
                         <color key="backgroundColor" name="grapefruit"/>
                         <constraints>
@@ -76,6 +76,7 @@
                     <constraint firstAttribute="trailing" secondItem="11R-9H-1Oo" secondAttribute="trailing" constant="19" id="A7L-Wo-cul"/>
                     <constraint firstItem="11R-9H-1Oo" firstAttribute="centerY" secondItem="iqt-6I-Hcr" secondAttribute="centerY" id="CYv-jb-S7O"/>
                     <constraint firstItem="TEt-8A-Fs2" firstAttribute="leading" secondItem="tuN-DW-CYx" secondAttribute="trailing" constant="12" id="IHl-Uw-Tnz"/>
+                    <constraint firstItem="lgh-RZ-kb4" firstAttribute="leading" secondItem="TEt-8A-Fs2" secondAttribute="trailing" constant="10" id="NRe-Kf-7gQ"/>
                     <constraint firstAttribute="trailing" secondItem="lgh-RZ-kb4" secondAttribute="trailing" constant="19" id="NtQ-1w-bbp"/>
                     <constraint firstItem="iqt-6I-Hcr" firstAttribute="top" secondItem="tuN-DW-CYx" secondAttribute="top" id="WVE-Fj-fNF"/>
                     <constraint firstItem="tuN-DW-CYx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZT6-8g-KWp"/>
@@ -83,12 +84,19 @@
                     <constraint firstAttribute="bottom" secondItem="BV1-e3-KUq" secondAttribute="bottom" id="hdd-hq-IgX"/>
                     <constraint firstItem="lgh-RZ-kb4" firstAttribute="centerY" secondItem="TEt-8A-Fs2" secondAttribute="centerY" id="inK-Wj-CEh"/>
                     <constraint firstItem="BV1-e3-KUq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kSD-79-VvI"/>
+                    <constraint firstItem="11R-9H-1Oo" firstAttribute="leading" secondItem="iqt-6I-Hcr" secondAttribute="trailing" id="mQu-kR-0WD"/>
                     <constraint firstAttribute="trailing" secondItem="BV1-e3-KUq" secondAttribute="trailing" id="tO4-5U-MwP"/>
                     <constraint firstItem="tuN-DW-CYx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="uyo-8E-jcI"/>
                     <constraint firstItem="iqt-6I-Hcr" firstAttribute="leading" secondItem="tuN-DW-CYx" secondAttribute="trailing" constant="12" id="woQ-Pg-hmI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bodyLabel" destination="TEt-8A-Fs2" id="SnX-5d-R4o"/>
+                <outlet property="lastTimeLabel" destination="lgh-RZ-kb4" id="2Fi-UT-ii1"/>
+                <outlet property="roomTitleImageView" destination="tuN-DW-CYx" id="JpZ-uK-XHo"/>
+                <outlet property="titleLabel" destination="iqt-6I-Hcr" id="fe0-bI-rki"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="118.86160714285714"/>
         </tableViewCell>
     </objects>
