--- a/woorischool/CustomView/CustomInputView.xib
+++ b/woorischool/CustomView/CustomInputView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,18 +20,18 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="371"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHk-op-xYY">
-                    <rect key="frame" x="0.0" y="803" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="312" width="375" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="uwb-Bx-IBp"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yzW-oh-8oX">
-                    <rect key="frame" x="13" y="824.5" width="32" height="22"/>
+                    <rect key="frame" x="13" y="333.5" width="32" height="22"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="32" id="RJh-3v-nEb"/>
                         <constraint firstAttribute="height" constant="24" id="suX-tV-y1M"/>
@@ -43,10 +43,10 @@
                     </connections>
                 </button>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOd-Lf-4A8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                    <rect key="frame" x="54" y="812" width="348" height="42"/>
+                    <rect key="frame" x="54" y="321" width="309" height="42"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
-                            <rect key="frame" x="18" y="6" width="255" height="30"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
+                            <rect key="frame" x="18" y="6" width="216" height="30"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="SAw-DA-uph"/>
@@ -59,7 +59,7 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCb-bs-l9w">
-                            <rect key="frame" x="281" y="11" width="25" height="25"/>
+                            <rect key="frame" x="242" y="11" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="3vn-5S-uLj"/>
                                 <constraint firstAttribute="height" constant="25" id="tMH-jI-w7x"/>
@@ -70,7 +70,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5J2-zt-Nxk">
-                            <rect key="frame" x="317" y="11" width="25" height="25"/>
+                            <rect key="frame" x="278" y="11" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="0fO-r2-yUW"/>
                                 <constraint firstAttribute="width" constant="25" id="lxZ-3y-9kj"/>
@@ -99,7 +99,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5y-LI-TZd">
-                    <rect key="frame" x="0.0" y="44" width="414" height="759"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="312"/>
                     <subviews>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDM-M8-2gX">
                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="144"/>
@@ -152,8 +152,9 @@
                 <constraint firstItem="yzW-oh-8oX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="13" id="k3t-oC-CXr"/>
                 <constraint firstItem="AOd-Lf-4A8" firstAttribute="leading" secondItem="yzW-oh-8oX" secondAttribute="trailing" constant="9" id="qVP-TE-DeI"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="105.79710144927537" y="113.83928571428571"/>
+            <point key="canvasLocation" x="104.8" y="-19.340329835082461"/>
         </view>
     </objects>
     <resources>
